--- a/src/output.css
+++ b/src/output.css
@@ -7,7 +7,7 @@
 }
 
 .badge{
-    @apply bg-yellow-400/50 text-amber-950 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+    @apply bg-yellow-300 text-amber-950 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
 }
 
 .btn{
